# graph-visualiser

./: .gitignore  README.md  big_250.csv  big_250.json  generate_json.py  install.bat  sample.csv  sample.json  sample.xml  specifikacija.md  test.bat  test1_module.py
api/: pyproject.toml
api/graph/api/: events.py
block-visualizer/: pyproject.toml
block-visualizer/graph/block_plugin/: __init__.py  renderer.py  visualizer.py
block-visualizer/graph/block_plugin/templates/: block_visualizer_dark.html  block_visualizer_light.html
csv-plugin/: pyproject.toml
csv-plugin/graph/csv_plugin/: datasource.py  parser.py
data/: big_250.xml  big_250_cycle.xml  complex.json
flask-explorer/: app.py
graph-explorer-django/app/: urls.py  views.py
graph-explorer-django/app/static/: graph-sync.js  home.js  styles.css
graph-explorer-django/app/templates/: base.html  home.html
graph-explorer-django/django_project/: settings.py  urls.py
graph-explorer-flask/: app.py
graph-explorer-flask/static/: bird-view.js  styles.css  tree-view.js
graph-explorer-flask/templates/: home.html
graph-explorer/django/app/: urls.py  views.py
graph-explorer/flask/: app.py
graph-explorer/flask/static/: bird-view.js  styles.css  tree-view.js
graph-explorer/flask/templates/: base.html  home.html
json-plugin/: pyproject.toml
json-plugin/graph/json_plugin/: config.py  datasource.py  parser.py
platform/: pyproject.toml
platform/graph/cli/: __init__.py  commands.py  (+1 more)
simple-visualizer/: pyproject.toml
simple-visualizer/graph/: __init__.py
simple-visualizer/graph/simple_plugin/: __init__.py  renderer.py  visualizer.py
simple-visualizer/graph/simple_plugin/templates/: simple_visualizer_dark.html  simple_visualizer_light.html
tests/: __init__.py  generate_json.py  test1_module.py  test_block_visualizer.py  test_facade_cli.py  test_search_filter.py  test_simple_visualizer.py  test_workspace_manager.py
xml-plugin/: pyproject.toml
xml-plugin/graph/xml_plugin/: datasource.py  parser.py
(+24 files in other folders)
