[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-simple-visualizer"
version = "0.1"
dependencies = ["graph-api==0.1"]

[project.entry-points."graph.visualizer"]
simple = "graph.simple_plugin.visualizer:SimpleVisualizer"

[tool.setuptools]
provides = ["graph"]